--- a/TOW3OperatoreAnalogicoBOT/.classpath
+++ b/TOW3OperatoreAnalogicoBOT/.classpath
@@ -84,5 +84,14 @@
 	<classpathentry kind="lib" path="lib/xalan-2.7.2.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl-2.12.0.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="lib/kumo-api-1.22-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/kumo-api-1.22-sources.jar"/>
+	<classpathentry kind="lib" path="lib/kumo-api-1.22.jar"/>
+	<classpathentry kind="lib" path="lib/kumo-cli-1.22-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/kumo-cli-1.22-sources.jar"/>
+	<classpathentry kind="lib" path="lib/kumo-cli-1.22.jar"/>
+	<classpathentry kind="lib" path="lib/kumo-core-1.22-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/kumo-core-1.22-sources.jar"/>
+	<classpathentry kind="lib" path="lib/kumo-core-1.22.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
